Clean-up hudson-test-harness. Update hudson-test-framework with preset-data and groovy plugin for tests