@@ -56,82 +56,6 @@
         </configuration>
       </plugin>
 
-      <!--<plugin>-->
-        <!--&lt;!&ndash; see http://maven-junit-plugin.kenai.com/ for more info &ndash;&gt;-->
-        <!--<groupId>com.sun.maven</groupId>-->
-        <!--<artifactId>maven-junit-plugin</artifactId>-->
-        <!--<version>1.6</version>-->
-        <!--<configuration>-->
-          <!--<skipTests>true</skipTests>-->
-        <!--</configuration>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<goals>-->
-              <!--<goal>test</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-              <!--<fork>true</fork>-->
-              <!--<concurrency>${concurrency}</concurrency>-->
-              <!--<argLine>-XX:MaxPermSize=192m -Xmx256m -Dfile.encoding=UTF-8</argLine>-->
-              <!--<systemProperties>-->
-                <!--<property>-->
-                  <!--&lt;!&ndash; use AntClassLoader that supports predictable file handle release &ndash;&gt;-->
-                  <!--<name>hudson.ClassicPluginStrategy.useAntClassLoader</name>-->
-                  <!--<value>true</value>-->
-                <!--</property>-->
-                <!--<property>-->
-                  <!--<name>java.util.logging.config.file</name>-->
-                  <!--<value>${basedir}/target/test-classes/jul.properties</value>-->
-                <!--</property>-->
-                <!--<property>-->
-                  <!--<name>hudson.maven.debug</name>-->
-                  <!--<value>${mavenDebug}</value>-->
-                <!--</property>-->
-                <!--<property>-->
-                  <!--<name>java.io.tmpdir</name>-->
-                  <!--<value>${project.build.directory}</value>-->
-                <!--</property> -->
-                <!--<property>-->
-                  <!--<name>buildDirectory</name>-->
-                  <!--<value>${project.build.directory}</value>-->
-                <!--</property>                               -->
-              <!--</systemProperties>-->
-            <!--</configuration>-->
-          <!--</execution>-->
-        <!--</executions>-->
-      <!--</plugin>-->
-
-      <plugin>
-        <groupId>org.kohsuke.gmaven</groupId>
-        <artifactId>gmaven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>preset-packager</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>execute</goal>
-            </goals>
-            <configuration>
-              <source>${pom.basedir}/src/main/preset-data/package.groovy</source>
-            </configuration>
-          </execution>
-          <execution>
-            <id>test-in-groovy</id>
-            <!-- allow tests written in Groovy -->
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>1.8.0</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-
       <plugin>
         <groupId>org.kohsuke.stapler</groupId>
         <artifactId>maven-stapler-plugin</artifactId>
